添加一些异步操作代码